tests/should-fail/type-error/r.implicitNonIntrodEffVar.fk
data Box = box {[E|](List Int)}

main: {Unit}
main! = unit
